--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "scripts": {
         "build": "NODE_ENV=production tailwindcss -i styles.css -o tailwind.css --minify",
+        "watch": "tailwindcss -i styles.css -o tailwind.css --watch",
         "serve": "http-server"
     }
 }
